k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: experiment-hub-backend-service
spec:
  selector:
    app: experiment-hub-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
